--- a/blaze-mail-utils/pom.xml
+++ b/blaze-mail-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.blazebit</groupId>
         <artifactId>blaze-utils</artifactId>
-        <version>0.1.3</version>
+        <version>0.1.4-SNAPSHOT</version>
     </parent>
     
     <artifactId>blaze-mail-utils</artifactId>
