--- a/blaze-common-utils/pom.xml
+++ b/blaze-common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.blazebit</groupId>
         <artifactId>blaze-utils</artifactId>
-        <version>0.1.4</version>
+        <version>0.1.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>blaze-common-utils</artifactId>
