--- a/blaze-common-utils/pom.xml
+++ b/blaze-common-utils/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.blazebit</groupId>
         <artifactId>blaze-utils</artifactId>
         <version>0.1.6-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>blaze-common-utils</artifactId>
@@ -72,4 +73,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+    <build>
+    	<pluginManagement>
+	    	<plugins>
+	    		<plugin>
+			      <groupId>org.codehaus.mojo</groupId>
+			      <artifactId>sonar-maven-plugin</artifactId>
+			      <version>2.0</version>
+			    </plugin>
+		    </plugins>
+    	</pluginManagement>
+    </build>
 </project>
