Fixed issues, organize imports
Fixed https://github.com/Blazebit/blaze-utils/issues/3
Fixed https://github.com/Blazebit/blaze-utils/issues/1
Created faster reflection accessors + tests

--- a/blaze-ee-utils/pom.xml
+++ b/blaze-ee-utils/pom.xml
@@ -85,11 +85,25 @@
             <artifactId>blaze-cbav</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>6.0</version>
-            <scope>provided</scope>
-        </dependency>
+			<groupId>org.jboss.spec</groupId>
+			<artifactId>jboss-javaee-6.0</artifactId>
+			<version>3.0.1.Final</version>
+			<scope>provided</scope>
+			<type>pom</type>
+			<exclusions>
+				<exclusion>
+					<groupId>xalan</groupId>
+					<artifactId>xalan</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+        
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.3.0.Final</version>
+			<scope>test</scope>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
