--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 		<version.deltaspike>0.3-incubating</version.deltaspike>
 		<version.freemarker>2.3.19</version.freemarker>
 		<version.junit>4.11</version.junit>
-		
+
 		<!-- Plugin versions -->
 		<version.processor.plugin>2.2.1</version.processor.plugin>
 	</properties>
@@ -171,12 +171,17 @@
 	</dependencyManagement>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.bsc.maven</groupId>
+					<artifactId>maven-processor-plugin</artifactId>
+					<version>${version.processor.plugin}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
-			<plugin>
-				<groupId>org.bsc.maven</groupId>
-				<artifactId>maven-processor-plugin</artifactId>
-				<version>${version.processor.plugin}</version>
-			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
