Update to DS 0.4 and cleanup poms

--- a/blaze-ee-utils/pom.xml
+++ b/blaze-ee-utils/pom.xml
@@ -45,9 +45,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<groupId>org.apache.openejb</groupId>
+			<artifactId>openejb-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
