--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -78,14 +79,24 @@
 	</developers>
 
 	<properties>
-		<version.blazecbav>0.1.9-SNAPSHOT</version.blazecbav>
-		<version.deltaspike>0.3-incubating</version.deltaspike>
+		<version.blazecbav>0.1.9</version.blazecbav>
+		<version.deltaspike>0.4</version.deltaspike>
 		<version.freemarker>2.3.19</version.freemarker>
 		<version.junit>4.11</version.junit>
+
+		<version.openejb>4.6.0-SNAPSHOT</version.openejb>
+		<version.openejb.javaee-api>6.0-4</version.openejb.javaee-api>
 
 		<!-- Plugin versions -->
 		<version.processor.plugin>2.2.1</version.processor.plugin>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>apache-snapshot</id>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -143,13 +154,13 @@
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>blaze-cbav</artifactId>
-				<version>0.1.9</version>
+				<version>${version.blazecbav}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.openejb</groupId>
 				<artifactId>javaee-api</artifactId>
-				<version>6.0-4</version>
+				<version>${version.openejb.javaee-api}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -158,12 +169,24 @@
 				<version>1.4.7</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>javax.faces</groupId>
+				<artifactId>javax.faces-api</artifactId>
+				<version>2.1</version>
+				<scope>provided</scope>
+			</dependency>
 
 			<!-- Test -->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${version.junit}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.openejb</groupId>
+				<artifactId>openejb-core</artifactId>
+				<version>${version.openejb}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
