--- a/blaze-ee-utils/pom.xml
+++ b/blaze-ee-utils/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>blaze-cbav</artifactId>
+			<version>0.2.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
