--- a/blaze-ee-utils/pom.xml
+++ b/blaze-ee-utils/pom.xml
@@ -51,7 +51,6 @@
             <!-- Use the old version for the bug workaround test -->
             <!-- <version>4.2.4.Final</version>  -->
             <version>4.2.5.Final</version>
-            <scope>test</scope>
         </dependency>
         
         <dependency>
@@ -65,6 +64,13 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.178</version>
+            <scope>test</scope>
+        </dependency>
+            
         
     </dependencies>
     <build>
