--- a/blaze-ee-utils/pom.xml
+++ b/blaze-ee-utils/pom.xml
@@ -64,6 +64,11 @@
             <!-- <version>4.2.4.Final</version>  -->
             <version>4.2.13.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
         
         <dependency>
             <groupId>org.apache.openejb</groupId>
