--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,17 @@
 					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-release-plugin</artifactId>
+                            <configuration>
+                                <pushChanges>false</pushChanges>
+                                <localCheckout>true</localCheckout>
+                                <autoVersionSubmodules>true</autoVersionSubmodules>
+
+                                <preparationGoals>clean install</preparationGoals>
+                            </configuration>
+                        </plugin>
 		</plugins>
 	</build>
     
