--- a/blaze-apt-utils/pom.xml
+++ b/blaze-apt-utils/pom.xml
@@ -16,6 +16,10 @@
     <url>http://blazebit.com/utils</url>
     <description>Annotation Processing Utilities</description>
 
+    <properties>
+        <module.name>com.blazebit.apt.utils</module.name>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
