--- a/blaze-ee-apt/pom.xml
+++ b/blaze-ee-apt/pom.xml
@@ -16,6 +16,10 @@
     <url>http://blazebit.com/utils</url>
     <description>Annotation Processors for Java EE Utilities for CDI, JPA ect.</description>
 
+    <properties>
+        <module.name>com.blazebit.ee.apt</module.name>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.deltaspike.core</groupId>
@@ -49,7 +53,7 @@
         <dependency>
             <groupId>com.google.testing.compile</groupId>
             <artifactId>compile-testing</artifactId>
-            <version>0.5</version>
+            <version>0.15</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
